# ray-serve-poc

./: Makefile  README.md  pyproject.toml
deployment/: local_deploy.py  ray_deploy.py
presentation/: demo.py  test_services.py
src/embeddings_service/: __init__.py  app.py  generator.py
src/shared/: models.py  utils.py
src/user_input_service/: __init__.py  app.py  client.py
