[tool.poetry]
name = "ray-embeddings-app"
version = "0.1.0"
description = "FastAPI microservices for vector embeddings with Ray deployment"
authors = ["Arsalan Anwar <aanwar@mdsol.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
ray = {extras = ["serve"], version = "^2.8.0"}
sentence-transformers = "^2.2.2"
pydantic = "^2.5.0"
numpy = "^1.24.0"
httpx = "^0.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
